# ros2-mecanum-keyboard-control

./: .clang-format  .ros2_env.zsh  Important secondary development documentation.md  README.md  core  如何运行智能车速度控制节点.md
docs/: 04_整合指南_智能车实际应用.md  05_快速开始_编译运行指南.md  06_键盘控制_添加停止功能教程.md  工作空间构建总结.md
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/ros_robot_controller/lib/ros_robot_controller/: ros_robot_controller
install/ros_robot_controller/share/ros_robot_controller/: package.sh
install/ros_robot_controller_msgs/include/ros_robot_controller_msgs/ros_robot_controller_msgs/msg/: servos_position.hpp
install/ros_robot_controller_msgs/include/ros_robot_controller_msgs/ros_robot_controller_msgs/msg/detail/: bus_servo_state__struct.hpp  button_state__struct.hpp  buzzer_state__struct.hpp  get_bus_servo_cmd__struct.hpp  led_state__struct.hpp  oled_state__struct.hpp  oled_state__type_support.hpp  pwm_servo_state__struct.hpp  servos_position__struct.hpp  servos_position__type_support.hpp
install/ros_robot_controller_msgs/share/ament_index/resource_index/parent_prefix_path/: ros_robot_controller_msgs
install/ros_robot_controller_msgs/share/ros_robot_controller_msgs/: local_setup.sh  package.sh
install/ros_robot_controller_msgs/share/ros_robot_controller_msgs/cmake/: export_ros_robot_controller_msgs__rosidl_typesupport_fastrtps_cppExport-noconfig.cmake  ros_robot_controller_msgs__rosidl_typesupport_cExport-noconfig.cmake  ros_robot_controller_msgs__rosidl_typesupport_cppExport-noconfig.cmake  ros_robot_controller_msgs__rosidl_typesupport_introspection_cExport-noconfig.cmake  ros_robot_controller_msgs__rosidl_typesupport_introspection_cppExport-noconfig.cmake
install/ros_robot_controller_msgs/share/ros_robot_controller_msgs/rust/: Cargo.toml
install/smart_car_core_demo/include/smart_car_core_demo/smart_car_core_demo/: keyboard_input.hpp
install/smart_car_core_demo/lib/smart_car_core_demo/: control_mode_client  speed_publisher  speed_subscriber  speed_subscriber_simple
install/smart_car_core_demo/share/ament_index/resource_index/parent_prefix_path/: smart_car_core_demo
install/smart_car_core_demo/share/smart_car_core_demo/: local_setup.sh  package.dsv  package.ps1  package.sh  package.xml
install/smart_car_core_demo/share/smart_car_core_demo/cmake/: smart_car_core_demoConfig.cmake
install/smart_car_core_demo/share/smart_car_core_demo/config/: params.yaml
install/smart_car_core_demo/share/smart_car_core_demo/launch/: topic_demo.launch.py
install/speed_control_msgs/include/speed_control_msgs/speed_control_msgs/msg/: rosidl_generator_c__visibility_control.h  rosidl_typesupport_fastrtps_cpp__visibility_control.h
install/speed_control_msgs/include/speed_control_msgs/speed_control_msgs/srv/: adjust_speed.h
install/speed_control_msgs/share/ament_index/resource_index/rosidl_interfaces/: speed_control_msgs
install/speed_control_msgs/share/speed_control_msgs/: local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/speed_control_msgs/share/speed_control_msgs/cmake/: ament_cmake_export_include_directories-extras.cmake  export_speed_control_msgs__rosidl_generator_cppExport.cmake  export_speed_control_msgs__rosidl_generator_pyExport-noconfig.cmake  export_speed_control_msgs__rosidl_generator_pyExport.cmake  export_speed_control_msgs__rosidl_typesupport_fastrtps_cExport.cmake  export_speed_control_msgs__rosidl_typesupport_fastrtps_cppExport.cmake  rosidl_cmake_export_typesupport_targets-extras.cmake  speed_control_msgsConfig.cmake  speed_control_msgs__rosidl_typesupport_introspection_cExport-noconfig.cmake  speed_control_msgs__rosidl_typesupport_introspection_cppExport-noconfig.cmake
jianpankongzhiws/install/: local_setup.sh  setup.sh
jianpankongzhiws/log/: latest_build
jianpankongzhiws/src/demo_cpp_pkg/: CMakeLists.txt  package.xml
log/: latest_build
ros2_core_examples/: README.md
ros2_core_examples/docs/: 01_话题_Topic_智能车运动控制.md  02_服务_Service_智能车控制命令.md  03_动作_Action_智能车任务执行.md  05_快速开始_编译运行指南.md  07_手动启动_智能车速度控制节点教程.md  智能车ROS2四大核心代码示例.md  目录结构改进建议.md
ros2_core_examples/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
ros2_core_examples/install/smart_car_core_demo/share/smart_car_core_demo/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
ros2_core_examples/log/: latest_build
ros2_core_examples/smart_car_core_demo/: CMakeLists.txt
ros2_core_examples/smart_car_core_demo/launch/: topic_demo.launch.py
ros2_core_examples/smart_car_core_demo/src/smart_car_core_demo/: cmd_vel_to_motors.cpp  speed_publisher.cpp  speed_subscriber.cpp
src/driver/ros_robot_controller/ros_robot_controller/: ros_robot_controller_node.py
src/driver/speed_control_msgs/: CMakeLists.txt
src/peripherals/: CMakeLists.txt
src/peripherals/config/: params.yaml
src/peripherals/launch/: topic_demo.launch.py
src/peripherals/src/: control_mode_client.cpp  keyboard_input.cpp  speed_publisher.cpp  speed_subscriber.cpp
(+14 files in other folders)
